fixing project navigation to be visible, III

--- a/css/style_one.css
+++ b/css/style_one.css
@@ -1789,9 +1789,9 @@ textarea:focus + .line-input {
 }
 .services-nav i {
   margin-right: 8px;
-  font-size: 22px;
+  font-size: 32px;
   color: #020033;
-  cursor: grab;
+  cursor: pointer;
   transition: color 0.3s ease-in-out;
 }
 .services-nav i:hover {
